--- a/TF22_Installation.ipynb
+++ b/TF22_Installation.ipynb
@@ -108,24 +108,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pycocotools'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-8df162388a6e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpycocotools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pycocotools'"
-     ]
-    }
-   ],
+   "source": [
+    "## pycocotools\n",
+    "Verify you can install - I had to install on SageMaker manually.  \n",
+    "Not sure what's going to happen on a new SageMaker notebook instance yet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pycocotools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Object Detection API\n",
+    "this was a mix of command line and doing the final install here.  \n",
+    "Not sure what's going to happend on a new SageMaker notebook instance yet."
    ]
   },
   {
@@ -333,6 +339,14 @@
    "source": [
     "# make sure your kernel is correct:  conda_tensorflow2_p36\n",
     "!python -m pip install ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Verification - Final\n",
+    "run this to verify it's set up correctly"
    ]
   },
   {
