--- a/TF22_Installation.ipynb
+++ b/TF22_Installation.ipynb
@@ -618,9 +618,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_tensorflow2_p36",
+   "display_name": "Python37 (tf24)",
    "language": "python",
-   "name": "conda_tensorflow2_p36"
+   "name": "tf24"
   },
   "language_info": {
    "codemirror_mode": {
@@ -632,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
