--- a/tensorboard/tensorboard_image_data.ipynb
+++ b/tensorboard/tensorboard_image_data.ipynb
@@ -5,12 +5,17 @@
    "metadata": {},
    "source": [
     "# Tensorboard Image Data\n",
-    "https://www.tensorflow.org/tensorboard/image_summaries"
+    "https://www.tensorflow.org/tensorboard/image_summaries\n",
+    "\n",
+    "DOES NOT work with TF 2.3  \n",
+    "DOES work with TF 2.4  \n",
+    "\n",
+    "not really convinced this is better than pytorch (torchvision) or tensorflow helpers or matplotlib - big deal!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,15 +33,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TensorFlow version:  2.2.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "import io\n",
@@ -44,12 +41,29 @@
     "from packaging import version\n",
     "from six.moves import range\n",
     "\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sklearn.metrics\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow version:  2.4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
     "\n",
     "print(\"TensorFlow version: \", tf.__version__)\n",
     "assert version.parse(tf.__version__).release[0] >= 2, \\\n",
@@ -67,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,11 +149,109 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reshaped training data: (1, 28, 28, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Reshape the image for the Summary API.\n",
-    "img = np.reshape(train_images[0], (-1, 28, 28, 1))"
+    "img = np.reshape(train_images[0], (-1, 28, 28, 1))\n",
+    "print (\"reshaped training data:\", img.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup the directories\n",
+    "# Clear out any prior log data.\n",
+    "!rm -rf logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets up a timestamped log directory.\n",
+    "logdir = \"logs/train_data/\" + datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "# Creates a file writer for the log directory.\n",
+    "file_writer = tf.summary.create_file_writer(logdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using the file writer, log the reshaped image.\n",
+    "with file_writer.as_default():\n",
+    "  tf.summary.image(\"Training data\", img, step=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-3868c7ee3a8ed06f\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-3868c7ee3a8ed06f\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir logs/train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with file_writer.as_default():\n",
+    "  # Don't forget to reshape.\n",
+    "  images = np.reshape(train_images[0:25], (-1, 28, 28, 1))\n",
+    "  tf.summary.image(\"25 training data examples\", images, max_outputs=25, step=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -151,9 +263,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python37 (tb22)",
+   "display_name": "Python37 (tb24)",
    "language": "python",
-   "name": "tb22"
+   "name": "tb24"
   },
   "language_info": {
    "codemirror_mode": {
