inference object testing

--- a/tf2x_ObjDet_tutorial/EnvironmentPrep.ipynb
+++ b/tf2x_ObjDet_tutorial/EnvironmentPrep.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ec2-user/SageMaker/TF2x_ObjDetect_Tutorial\r\n"
+      "/home/train/projects/tf20_vision_samples/tf2x_ObjDet_tutorial\r\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.2.0\n"
+      "2.4.0\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,31 +217,17 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 1622419150615044548\n",
-      ", name: \"/device:XLA_CPU:0\"\n",
-      "device_type: \"XLA_CPU\"\n",
-      "memory_limit: 17179869184\n",
-      "locality {\n",
-      "}\n",
-      "incarnation: 2203761585927268466\n",
-      "physical_device_desc: \"device: XLA_CPU device\"\n",
+      "incarnation: 1887576056887025342\n",
       ", name: \"/device:GPU:0\"\n",
       "device_type: \"GPU\"\n",
-      "memory_limit: 10422260864\n",
+      "memory_limit: 7281943520\n",
       "locality {\n",
       "  bus_id: 1\n",
       "  links {\n",
       "  }\n",
       "}\n",
-      "incarnation: 15260122427675071211\n",
-      "physical_device_desc: \"device: 0, name: GeForce GTX 1080 Ti, pci bus id: 0000:01:00.0, compute capability: 6.1\"\n",
-      ", name: \"/device:XLA_GPU:0\"\n",
-      "device_type: \"XLA_GPU\"\n",
-      "memory_limit: 17179869184\n",
-      "locality {\n",
-      "}\n",
-      "incarnation: 13442221504743805540\n",
-      "physical_device_desc: \"device: XLA_GPU device\"\n",
+      "incarnation: 16155523525052581020\n",
+      "physical_device_desc: \"device: 0, name: GeForce GTX 1080, pci bus id: 0000:01:00.0, compute capability: 6.1\"\n",
       "]\n"
      ]
     }
@@ -253,14 +239,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor(-312.10156, shape=(), dtype=float32)\n"
+      "tf.Tensor(451.1012, shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -1554,9 +1540,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python37 (tf22)",
+   "display_name": "Python37 (tf24)",
    "language": "python",
-   "name": "tf22"
+   "name": "tf24"
   },
   "language_info": {
    "codemirror_mode": {
